// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HierarchicalMenu renders markup with state 1`] = `
<ng-ais-hierarchical-menu
  cx={[Function Function]}
  limit={[Function Number]}
  platformId={[Function String]}
  searchInstance={[Function NgAisInstance]}
  separator={[Function String]}
  state={[Function Object]}
  updateState={[Function Function]}
>
  
      <div
    class="ais-HierarchicalMenu"
  >
    
        
    <ng-ais-header
      ng-reflect-class-name="ais-HierarchicalMenu-header ai"
    >
      
      
      
      
    
    </ng-ais-header>
    
  
        
    <div
      class="ais-HierarchicalMenu-body ais-body"
    >
      
          
      <ul
        class="ais-HierarchicalMenu-list ais-HierarchicalMenu-list--lvl0"
      >
        
            
        
        <ng-ais-hierarchical-menu-item
          ng-reflect-create-u-r-l="function () {
          return f"
          ng-reflect-item="[object Object]"
          ng-reflect-refine="function () {
          return f"
        >
          
      
          <li
            class="ais-HierarchicalMenu-item"
          >
            
        
            <a
              class="ais-HierarchicalMenu-link"
              href=""
            >
              
          one
          
              <span
                class="ais-HierarchicalMenu-count"
              >
                
            100
          
              </span>
              
        
            </a>
            
  
        
            
            
      
          </li>
          
    
        </ng-ais-hierarchical-menu-item>
        <ng-ais-hierarchical-menu-item
          ng-reflect-create-u-r-l="function () {
          return f"
          ng-reflect-item="[object Object]"
          ng-reflect-refine="function () {
          return f"
        >
          
      
          <li
            class="ais-HierarchicalMenu-item ais-HierarchicalMenu-item--selected"
          >
            
        
            <a
              class="ais-HierarchicalMenu-link"
              href=""
            >
              
          two
          
              <span
                class="ais-HierarchicalMenu-count"
              >
                
            100
          
              </span>
              
        
            </a>
            
  
        
            
            <ul
              class="ais-HierarchicalMenu-list ais-HierarchicalMenu-list--lvl1"
            >
              
          
              
              <ng-ais-hierarchical-menu-item
                ng-reflect-create-u-r-l="function () {
          return f"
                ng-reflect-item="[object Object]"
                ng-reflect-lvl="2"
                ng-reflect-refine="function () {
          return f"
              >
                
      
                <li
                  class="ais-HierarchicalMenu-item"
                >
                  
        
                  <a
                    class="ais-HierarchicalMenu-link"
                    href=""
                  >
                    
          six
          
                    <span
                      class="ais-HierarchicalMenu-count"
                    >
                      
            100
          
                    </span>
                    
        
                  </a>
                  
  
        
                  
                  
      
                </li>
                
    
              </ng-ais-hierarchical-menu-item>
              <ng-ais-hierarchical-menu-item
                ng-reflect-create-u-r-l="function () {
          return f"
                ng-reflect-item="[object Object]"
                ng-reflect-lvl="2"
                ng-reflect-refine="function () {
          return f"
              >
                
      
                <li
                  class="ais-HierarchicalMenu-item"
                >
                  
        
                  <a
                    class="ais-HierarchicalMenu-link"
                    href=""
                  >
                    
          seven
          
                    <span
                      class="ais-HierarchicalMenu-count"
                    >
                      
            100
          
                    </span>
                    
        
                  </a>
                  
  
        
                  
                  
      
                </li>
                
    
              </ng-ais-hierarchical-menu-item>
              <ng-ais-hierarchical-menu-item
                ng-reflect-create-u-r-l="function () {
          return f"
                ng-reflect-item="[object Object]"
                ng-reflect-lvl="2"
                ng-reflect-refine="function () {
          return f"
              >
                
      
                <li
                  class="ais-HierarchicalMenu-item"
                >
                  
        
                  <a
                    class="ais-HierarchicalMenu-link"
                    href=""
                  >
                    
          eight
          
                    <span
                      class="ais-HierarchicalMenu-count"
                    >
                      
            100
          
                    </span>
                    
        
                  </a>
                  
  
        
                  
                  
      
                </li>
                
    
              </ng-ais-hierarchical-menu-item>
              <ng-ais-hierarchical-menu-item
                ng-reflect-create-u-r-l="function () {
          return f"
                ng-reflect-item="[object Object]"
                ng-reflect-lvl="2"
                ng-reflect-refine="function () {
          return f"
              >
                
      
                <li
                  class="ais-HierarchicalMenu-item"
                >
                  
        
                  <a
                    class="ais-HierarchicalMenu-link"
                    href=""
                  >
                    
          nine
          
                    <span
                      class="ais-HierarchicalMenu-count"
                    >
                      
            100
          
                    </span>
                    
        
                  </a>
                  
  
        
                  
                  
      
                </li>
                
    
              </ng-ais-hierarchical-menu-item>
              
        
            </ul>
            
      
          </li>
          
    
        </ng-ais-hierarchical-menu-item>
        <ng-ais-hierarchical-menu-item
          ng-reflect-create-u-r-l="function () {
          return f"
          ng-reflect-item="[object Object]"
          ng-reflect-refine="function () {
          return f"
        >
          
      
          <li
            class="ais-HierarchicalMenu-item"
          >
            
        
            <a
              class="ais-HierarchicalMenu-link"
              href=""
            >
              
          three
          
              <span
                class="ais-HierarchicalMenu-count"
              >
                
            100
          
              </span>
              
        
            </a>
            
  
        
            
            
      
          </li>
          
    
        </ng-ais-hierarchical-menu-item>
        <ng-ais-hierarchical-menu-item
          ng-reflect-create-u-r-l="function () {
          return f"
          ng-reflect-item="[object Object]"
          ng-reflect-refine="function () {
          return f"
        >
          
      
          <li
            class="ais-HierarchicalMenu-item"
          >
            
        
            <a
              class="ais-HierarchicalMenu-link"
              href=""
            >
              
          four
          
              <span
                class="ais-HierarchicalMenu-count"
              >
                
            100
          
              </span>
              
        
            </a>
            
  
        
            
            
      
          </li>
          
    
        </ng-ais-hierarchical-menu-item>
        <ng-ais-hierarchical-menu-item
          ng-reflect-create-u-r-l="function () {
          return f"
          ng-reflect-item="[object Object]"
          ng-reflect-refine="function () {
          return f"
        >
          
      
          <li
            class="ais-HierarchicalMenu-item"
          >
            
        
            <a
              class="ais-HierarchicalMenu-link"
              href=""
            >
              
          five
          
              <span
                class="ais-HierarchicalMenu-count"
              >
                
            100
          
              </span>
              
        
            </a>
            
  
        
            
            
      
          </li>
          
    
        </ng-ais-hierarchical-menu-item>
        
          
      </ul>
      
        
    </div>
    
  
        
    <ng-ais-footer
      ng-reflect-class-name="ais-HierarchicalMenu-footer ai"
    >
      
      
      
      
    
    </ng-ais-footer>
    
      
  </div>
    
</ng-ais-hierarchical-menu>
`;

exports[`HierarchicalMenu renders markup without state 1`] = `
<ng-ais-hierarchical-menu
  cx={[Function Function]}
  limit={[Function Number]}
  platformId={[Function String]}
  searchInstance={[Function NgAisInstance]}
  separator={[Function String]}
  state={[Function Object]}
  updateState={[Function Function]}
>
  
      <div
    class="ais-HierarchicalMenu"
  >
    
        
    <ng-ais-header
      ng-reflect-class-name="ais-HierarchicalMenu-header ai"
    >
      
      
      
      
    
    </ng-ais-header>
    
  
        
    <div
      class="ais-HierarchicalMenu-body ais-body"
    >
      
          
      <ul
        class="ais-HierarchicalMenu-list ais-HierarchicalMenu-list--lvl0"
      >
        
            
        
        
          
      </ul>
      
        
    </div>
    
  
        
    <ng-ais-footer
      ng-reflect-class-name="ais-HierarchicalMenu-footer ai"
    >
      
      
      
      
    
    </ng-ais-footer>
    
      
  </div>
    
</ng-ais-hierarchical-menu>
`;

exports[`HierarchicalMenu should apply \`transformItems\` if specified 1`] = `
<ng-ais-hierarchical-menu
  cx={[Function Function]}
  limit={[Function Number]}
  platformId={[Function String]}
  searchInstance={[Function NgAisInstance]}
  separator={[Function String]}
  state={[Function Object]}
  transformItems={[Function Function]}
  updateState={[Function Function]}
>
  
      <div
    class="ais-HierarchicalMenu"
  >
    
        
    <ng-ais-header
      ng-reflect-class-name="ais-HierarchicalMenu-header ai"
    >
      
      
      
      
    
    </ng-ais-header>
    
  
        
    <div
      class="ais-HierarchicalMenu-body ais-body"
    >
      
          
      <ul
        class="ais-HierarchicalMenu-list ais-HierarchicalMenu-list--lvl0"
      >
        
            
        
        <ng-ais-hierarchical-menu-item
          ng-reflect-create-u-r-l="function () {
          return f"
          ng-reflect-item="[object Object]"
          ng-reflect-refine="function () {
          return f"
        >
          
      
          <li
            class="ais-HierarchicalMenu-item"
          >
            
        
            <a
              class="ais-HierarchicalMenu-link"
              href=""
            >
              
          foo - one
          
              <span
                class="ais-HierarchicalMenu-count"
              >
                
            100
          
              </span>
              
        
            </a>
            
  
        
            
            
      
          </li>
          
    
        </ng-ais-hierarchical-menu-item>
        <ng-ais-hierarchical-menu-item
          ng-reflect-create-u-r-l="function () {
          return f"
          ng-reflect-item="[object Object]"
          ng-reflect-refine="function () {
          return f"
        >
          
      
          <li
            class="ais-HierarchicalMenu-item ais-HierarchicalMenu-item--selected"
          >
            
        
            <a
              class="ais-HierarchicalMenu-link"
              href=""
            >
              
          foo - two
          
              <span
                class="ais-HierarchicalMenu-count"
              >
                
            100
          
              </span>
              
        
            </a>
            
  
        
            
            <ul
              class="ais-HierarchicalMenu-list ais-HierarchicalMenu-list--lvl1"
            >
              
          
              
              <ng-ais-hierarchical-menu-item
                ng-reflect-create-u-r-l="function () {
          return f"
                ng-reflect-item="[object Object]"
                ng-reflect-lvl="2"
                ng-reflect-refine="function () {
          return f"
              >
                
      
                <li
                  class="ais-HierarchicalMenu-item"
                >
                  
        
                  <a
                    class="ais-HierarchicalMenu-link"
                    href=""
                  >
                    
          foo - six
          
                    <span
                      class="ais-HierarchicalMenu-count"
                    >
                      
            100
          
                    </span>
                    
        
                  </a>
                  
  
        
                  
                  
      
                </li>
                
    
              </ng-ais-hierarchical-menu-item>
              <ng-ais-hierarchical-menu-item
                ng-reflect-create-u-r-l="function () {
          return f"
                ng-reflect-item="[object Object]"
                ng-reflect-lvl="2"
                ng-reflect-refine="function () {
          return f"
              >
                
      
                <li
                  class="ais-HierarchicalMenu-item"
                >
                  
        
                  <a
                    class="ais-HierarchicalMenu-link"
                    href=""
                  >
                    
          foo - seven
          
                    <span
                      class="ais-HierarchicalMenu-count"
                    >
                      
            100
          
                    </span>
                    
        
                  </a>
                  
  
        
                  
                  
      
                </li>
                
    
              </ng-ais-hierarchical-menu-item>
              <ng-ais-hierarchical-menu-item
                ng-reflect-create-u-r-l="function () {
          return f"
                ng-reflect-item="[object Object]"
                ng-reflect-lvl="2"
                ng-reflect-refine="function () {
          return f"
              >
                
      
                <li
                  class="ais-HierarchicalMenu-item"
                >
                  
        
                  <a
                    class="ais-HierarchicalMenu-link"
                    href=""
                  >
                    
          foo - eight
          
                    <span
                      class="ais-HierarchicalMenu-count"
                    >
                      
            100
          
                    </span>
                    
        
                  </a>
                  
  
        
                  
                  
      
                </li>
                
    
              </ng-ais-hierarchical-menu-item>
              <ng-ais-hierarchical-menu-item
                ng-reflect-create-u-r-l="function () {
          return f"
                ng-reflect-item="[object Object]"
                ng-reflect-lvl="2"
                ng-reflect-refine="function () {
          return f"
              >
                
      
                <li
                  class="ais-HierarchicalMenu-item"
                >
                  
        
                  <a
                    class="ais-HierarchicalMenu-link"
                    href=""
                  >
                    
          foo - nine
          
                    <span
                      class="ais-HierarchicalMenu-count"
                    >
                      
            100
          
                    </span>
                    
        
                  </a>
                  
  
        
                  
                  
      
                </li>
                
    
              </ng-ais-hierarchical-menu-item>
              
        
            </ul>
            
      
          </li>
          
    
        </ng-ais-hierarchical-menu-item>
        <ng-ais-hierarchical-menu-item
          ng-reflect-create-u-r-l="function () {
          return f"
          ng-reflect-item="[object Object]"
          ng-reflect-refine="function () {
          return f"
        >
          
      
          <li
            class="ais-HierarchicalMenu-item"
          >
            
        
            <a
              class="ais-HierarchicalMenu-link"
              href=""
            >
              
          foo - three
          
              <span
                class="ais-HierarchicalMenu-count"
              >
                
            100
          
              </span>
              
        
            </a>
            
  
        
            
            
      
          </li>
          
    
        </ng-ais-hierarchical-menu-item>
        <ng-ais-hierarchical-menu-item
          ng-reflect-create-u-r-l="function () {
          return f"
          ng-reflect-item="[object Object]"
          ng-reflect-refine="function () {
          return f"
        >
          
      
          <li
            class="ais-HierarchicalMenu-item"
          >
            
        
            <a
              class="ais-HierarchicalMenu-link"
              href=""
            >
              
          foo - four
          
              <span
                class="ais-HierarchicalMenu-count"
              >
                
            100
          
              </span>
              
        
            </a>
            
  
        
            
            
      
          </li>
          
    
        </ng-ais-hierarchical-menu-item>
        <ng-ais-hierarchical-menu-item
          ng-reflect-create-u-r-l="function () {
          return f"
          ng-reflect-item="[object Object]"
          ng-reflect-refine="function () {
          return f"
        >
          
      
          <li
            class="ais-HierarchicalMenu-item"
          >
            
        
            <a
              class="ais-HierarchicalMenu-link"
              href=""
            >
              
          foo - five
          
              <span
                class="ais-HierarchicalMenu-count"
              >
                
            100
          
              </span>
              
        
            </a>
            
  
        
            
            
      
          </li>
          
    
        </ng-ais-hierarchical-menu-item>
        
          
      </ul>
      
        
    </div>
    
  
        
    <ng-ais-footer
      ng-reflect-class-name="ais-HierarchicalMenu-footer ai"
    >
      
      
      
      
    
    </ng-ais-footer>
    
      
  </div>
    
</ng-ais-hierarchical-menu>
`;
